<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.authentication.LoginScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frame1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:background="@color/secondaryBackground"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cardF">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:transitionName="logo_img"
            android:layout_marginTop="25dp"
            android:src="@drawable/svg_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/title1"
            style="@style/OnboardingHeadingTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/world_s_only_one_stop_hotel_solution_software_with_ai"
            android:layout_marginHorizontal="10dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo" />

        <TextView
            android:id="@+id/title2"
            style="@style/OnboardingSubHeadingTextStyle"
            android:layout_width="0dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/a_complete_suite_of_hotel_solutions"
            app:layout_constraintEnd_toEndOf="@id/title1"
            app:layout_constraintStart_toStartOf="@id/title1"
            app:layout_constraintTop_toBottomOf="@+id/title1" />

        <ImageView
            android:id="@+id/onBoardingImg"
            android:layout_width="400dp"
            android:layout_height="0dp"
            android:transitionName="onBoardingImg"
            android:src="@drawable/vector_login"
            android:layout_marginVertical="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title2"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardF"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        style="@style/OnBoardingCardViewTheme"
        app:layout_constraintStart_toEndOf="@+id/frame1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/primaryBackground">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primaryBackground">

            <LinearLayout
                android:id="@+id/loginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="100dp"
                android:transitionName="login_board"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/openLoginScreen"
                    android:layout_width="170dp"
                    android:layout_height="match_parent"
                    android:text="@string/existing_user_log_in"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:background="@drawable/corner_left_grey_background"
                    android:textSize="@dimen/H5"
                    android:fontFamily="@font/roboto"
                    android:textFontWeight="500"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="60dp"
                    android:background="@color/black"/>

                <TextView
                    android:id="@+id/openSignUpScreen"
                    android:layout_width="170dp"
                    android:layout_height="match_parent"
                    android:text="@string/sign_up"
                    android:textAlignment="center"
                    android:background="@drawable/corner_right_black_background"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="@dimen/H4"
                    android:fontFamily="@font/roboto_bold"
                    android:textFontWeight="500"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </LinearLayout>

            <FrameLayout
                android:id="@+id/authFragContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/loginTitle"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>