<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.authentication.ForgetPasswordScreen">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frame1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/frame2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/secondaryBackground">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:transitionName="logo_img"
            android:layout_marginTop="25dp"
            android:src="@drawable/svg_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/title1"
            style="@style/OnboardingHeadingTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/world_s_only_one_stop_hotel_solution_software_with_ai"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo"/>

        <TextView
            android:id="@+id/title2"
            style="@style/OnboardingSubHeadingTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_complete_suite_of_hotel_solutions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title1" />

        <ImageView
            android:id="@+id/onBoardingImg"
            android:layout_width="400dp"
            android:layout_height="0dp"
            android:layout_marginVertical="10dp"
            android:transitionName="onBoardingImg"
            android:src="@drawable/svg_forget_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title2"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/frame2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintStart_toEndOf="@+id/frame1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/primaryBackground">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primaryBackground">

            <ImageView
                android:id="@+id/forgotBackbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:transitionName="backBtn"
                android:src="@drawable/vector_back_btn"
                android:layout_marginTop="40dp"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/forgottitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/secondary"
                android:text="@string/reset_password"
                android:textSize="@dimen/H2"
                android:fontFamily="@font/roboto_bold"
                app:layout_constraintVertical_bias="0.35"
                app:layout_constraintStart_toStartOf="@id/title3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/title3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/enter_the_email_address_you_used"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/roboto"
                android:textFontWeight="400"
                android:textColor="#828282"
                app:layout_constraintTop_toBottomOf="@id/forgottitle"
                app:layout_constraintStart_toStartOf="@id/forgotBackbtn"
                app:layout_constraintEnd_toEndOf="parent"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/forgot_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:hint="Email address"
                app:boxStrokeColor="@color/black"
                android:layout_marginTop="20dp"
                app:boxStrokeWidthFocused="2dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:endIconMode="clear_text"
                app:endIconTint="@color/black"
                app:layout_constraintStart_toStartOf="@id/title3"
                app:layout_constraintEnd_toEndOf="@id/title3"
                app:layout_constraintTop_toBottomOf="@+id/title3">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/forgot_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto"
                    android:inputType="text"
                    android:textColorHint="@color/secondary"
                    android:textColor="@color/secondary" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/resetCard"
                android:layout_width="180dp"
                android:layout_height="45dp"
                android:transitionName="Btn"
                app:layout_constraintTop_toBottomOf="@+id/forgot_layout"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/black"
                app:layout_constraintStart_toStartOf="@id/forgot_layout"
                app:cardCornerRadius="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reset_password"
                    android:layout_gravity="center"
                    android:fontFamily="@font/roboto_bold"
                    android:textSize="@dimen/H4"
                    android:textColor="@color/white"/>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>