<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".onboarding.authentication.CreateNewPasswordActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frame1"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/frame2"
        android:background="@color/secondaryBackground">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:transitionName="logo_img"
            android:layout_marginTop="25dp"
            android:src="@drawable/svg_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/title1"
            style="@style/OnboardingHeadingTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/world_s_only_one_stop_hotel_solution_software_with_ai"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logo"/>

        <TextView
            android:id="@+id/title2"
            style="@style/OnboardingSubHeadingTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_complete_suite_of_hotel_solutions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title1" />

        <ImageView
            android:id="@+id/onBoardingImg"
            android:layout_width="400dp"
            android:layout_height="0dp"
            android:transitionName="onBoardingImg"
            android:src="@drawable/svg_forget_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title2"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/frame2"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintStart_toEndOf="@+id/frame1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/primaryBackground">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primaryBackground">

            <ImageView
                android:id="@+id/forgotBackbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:transitionName="backBtn"
                android:src="@drawable/vector_back_btn"
                android:layout_marginTop="40dp"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/forgottitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/secondary"
                android:text="@string/create_new_password"
                android:textSize="@dimen/H2"
                android:fontFamily="@font/roboto_bold"
                app:layout_constraintVertical_bias="0.35"
                app:layout_constraintStart_toStartOf="@id/title3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/title3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Use your registered e-mail address to reset your password."
                android:layout_marginTop="10dp"
                android:layout_marginEnd="40dp"
                android:fontFamily="@font/roboto"
                android:textFontWeight="400"
                android:textColor="#828282"
                app:layout_constraintTop_toBottomOf="@id/forgottitle"
                app:layout_constraintStart_toStartOf="@id/forgotBackbtn"
                app:layout_constraintEnd_toEndOf="parent"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginEnd="50dp"
                app:layout_constraintStart_toStartOf="@id/title3"
                app:layout_constraintEnd_toEndOf="@id/title3"
                app:layout_constraintTop_toBottomOf="@+id/title3">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/createNewPasswordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:hint="Create new password"
                    app:startIconDrawable="@drawable/svg_key"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:hintTextColor="@color/secondary"
                    android:layout_marginTop="20dp"
                    app:boxStrokeWidthFocused="2dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/createNewPasswordText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/roboto"
                        android:inputType="text"
                        android:textColorHint="@color/secondary"
                        android:textColor="@color/secondary" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/confirmNewPasswordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:hint="Confirm new password"
                    app:startIconDrawable="@drawable/svg_keys"
                    android:textColorHint="@color/black"
                    app:boxStrokeColor="@color/black"
                    app:hintTextColor="@color/secondary"
                    android:layout_marginTop="10dp"
                    app:boxStrokeWidthFocused="2dp"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/black">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/confirmNewPasswordText"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/roboto"
                        android:inputType="text"
                        android:textColorHint="@color/secondary"
                        android:textColor="@color/secondary" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.cardview.widget.CardView
                    android:id="@+id/resetCard"
                    android:layout_width="wrap_content"
                    android:layout_height="45dp"
                    app:layout_constraintTop_toBottomOf="@+id/forgot_layout"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/black"
                    app:layout_constraintStart_toStartOf="@id/forgot_layout"
                    app:cardCornerRadius="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reset_password"
                        android:transitionName="Btn"
                        android:layout_marginHorizontal="20dp"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_bold"
                        android:textSize="@dimen/H5"
                        android:textColor="@color/white"/>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>